--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "daisyui": "^4.12.13",
+    "daisyui": "^5.0.12",
     "eslint": "^8",
     "eslint-config-next": "^15.2.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.3",
     "typescript": "^5"
   }
 }
